trunk/Archive2/93/842129f7f4e0a5/output
*** LLVM ***
7
*** ok ***


*** GNU ***
main.cpp: In constructor 'B::B()':
main.cpp:18:2: error: use of deleted function 'A::A()'
  {
  ^
main.cpp:5:5: note: declared here
     A() = delete;
     ^
